--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "@vimeo/player": "^2.25.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.6",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
