--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.1",
