--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@vimeo/player": "^2.25.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
