--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0",
     "react-player": "^2.16.0",
+    "react-razorpay": "^3.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
