--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
+    "puppeteer": "^23.9.0",
     "streamifier": "^0.1.1"
   }
 }
