--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.6",
+    "framer-motion": "^11.13.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
