--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.6",
     "framer-motion": "^11.13.1",
+    "html-react-parser": "^5.1.19",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
@@ -25,6 +26,7 @@
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0",
     "react-player": "^2.16.0",
+    "react-quill": "^2.0.0",
     "react-razorpay": "^3.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
