--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@headlessui/react": "^2.2.0",
+    "@mui/material": "^6.1.10",
+    "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.3.0",
     "@vimeo/player": "^2.25.0",
     "axios": "^1.7.7",
