--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.6",
+    "face-api.js": "^0.22.2",
     "framer-motion": "^11.13.1",
     "html-react-parser": "^5.1.19",
     "react": "^18.3.1",
@@ -36,6 +37,7 @@
     "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
+    "react-webcam": "^7.2.0",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^6.8.4",
