--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-phone-number-input": "^3.4.10",
     "react-player": "^2.16.0",
     "react-quill": "^2.0.0",
     "react-razorpay": "^3.0.1",
