--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.6",
+    "date-fns": "^4.1.0",
     "face-api.js": "^0.22.2",
     "framer-motion": "^11.13.1",
     "html-react-parser": "^5.1.19",
