--- a/client/package.json
+++ b/client/package.json
@@ -22,9 +22,11 @@
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
+    "emoji-picker-react": "^4.12.0",
     "face-api.js": "^0.22.2",
     "framer-motion": "^11.13.1",
     "html-react-parser": "^5.1.19",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
@@ -42,6 +44,7 @@
     "react-webcam": "^7.2.0",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "swiper": "^6.8.4",
     "tailwind-scrollbar": "^3.1.0"
   },
