--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "html-parser": "^0.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
@@ -26,6 +27,7 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "puppeteer": "^23.9.0",
+    "socket.io": "^4.8.1",
     "streamifier": "^0.1.1"
   }
 }
