--- a/server/package.json
+++ b/server/package.json
@@ -14,18 +14,22 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "cheerio": "^1.0.0",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
+    "docx-parser": "^0.2.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "html-parser": "^0.11.0",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
+    "pdf-parse": "^1.1.1",
     "puppeteer": "^23.9.0",
     "socket.io": "^4.8.1",
     "streamifier": "^0.1.1"
