--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "face-api.js": "^0.22.2",
     "framer-motion": "^11.13.1",
     "html-react-parser": "^5.1.19",
+    "mathjs": "^15.1.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
