--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cheerio": "^1.0.0",
-    "cloudinary": "^2.5.1",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "docx-parser": "^0.2.1",
     "dotenv": "^16.4.5",
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
