--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-markdown": "^10.1.0",
     "react-phone-number-input": "^3.4.10",
     "react-player": "^2.16.0",
     "react-quill": "^2.0.0",
@@ -44,6 +45,7 @@
     "react-toastify": "^10.0.6",
     "react-webcam": "^7.2.0",
     "redux-persist": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "swiper": "^12.0.3",
